# driver-service/src/main/java/com/example/driverservice/entity/Account.java
@@ -1,0 +1,25 @@
+package com.example.driverservice.entity;
+
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
+import lombok.Setter;
+import lombok.ToString;
+
+import javax.persistence.*;
+
+@Entity
+@Getter
+@Setter
+@ToString
+@RequiredArgsConstructor
+@Table(schema = "driver_service", name = "account")
+public class Account extends BaseEntity {
+
+    @Column(name = "balance")
+    private String balance;
+
+    @OneToOne(cascade = CascadeType.ALL)
+    @JoinColumn(name = "driver_id", referencedColumnName = "id")
+    private Driver driver;
+
+}
